--- a/formulario2.html
+++ b/formulario2.html
@@ -11,13 +11,14 @@
 <p>responda todas as questões, utilize rascunhos em papel para realizar os calculos. os rascunhos serão recolhidos pelo professor apos a qua</p>
 
 <fieldset>
+<form>
 <legend>informações do aluno</legend>
 <label for="nome_id"></label>
 <input id="nome_id" type="text" placeholder="digite seu nome"><br>
 <br><label for="nome_id"></label>
-<input id="nome_id" type="text" placeholder="Nº de pessoas no grupo"><br>
+<input id="nome_id" type="number" placeholder="Nº de pessoas no grupo"><br>
 <label for="nome_id"></label><br>
-<input id="nome_id" type="text" placeholder="digite seu email"><br><br>
+<input id="nome_id" type="email" placeholder="digite seu email"><br><br>
 <label for="nome_id"> data de nascimento</label><br>
 <input id="date" type="date"><br>
 <br><label for="nome_id">digite uma senha para acessar os dados da pesquisa posteriormente</label><br><br>
@@ -28,11 +29,11 @@
 <legend>matematica</legend>
 <img src="https://suap.ifpi.edu.br/media/edu/material_aula/matematica-a3f4da9219ee4838943aa6975df183d3.jpg" alt="matematica" width="300" height="300">
 <br><br><label for="number"> 3+4=</label>
-<input type="text"><br><br>
+<input type="number"><br><br>
 <label for="number">10/3=</label>
-<input type="text"><br><br>
+<input type="number"><br><br>
 <label for="number"> 5*2=</label>
-<input type="text"><br><br>
+<input type="number"><br><br>
 <label for="caixa"> essa tafera foi dificil?</label>
 <input id="numero_id" type="range" name="numero" min="0" max="5" step="0.2">
 </fieldset> 
@@ -41,22 +42,20 @@
 <legend>opinião sobre a utilização</legend>
 <img src="https://suap.ifpi.edu.br/media/edu/material_aula/portugues-d6ea7cda8d924abf8f7fac7fc1621e43.jpg" alt="português" width="400" height="300">
 <br> <label for="caixa"> na frase: 'eu sou bonito' o sujeito é</label>
-<form>
-<input type="radio" name="opção1" value="opção1"> brade pitt<br>
-<input type="radio" name="opção2" value="opção2"> joão da padaria<br>
-<input type="radio" name="opção3" value="opção3"> você mesmo<br>
-<input type="radio" name="opção4" value="opção4"> meus pais<br>
-<input type="radio" name="opção5" value="opção5"> eu
-</form>
+
+<input type="radio" name="opção" value="opção1"> brade pitt<br>
+<input type="radio" name="opção" value="opção2"> joão da padaria<br>
+<input type="radio" name="opção" value="opção3"> você mesmo<br>
+<input type="radio" name="opção" value="opção4"> meus pais<br>
+<input type="radio" name="opção" value="opção5"> eu
+
 
 <br> <label for="caixa"> complete a frase: "filho de peixinho, peixinho _____"</label>
-<form>
 <input type="checkbox" name="opção1" value="opção1"> é<br>
 <input type="checkbox" name="opção2" value="opção2"> tem<br>
 <input type="checkbox" name="opção3" value="opção3"> verde<br>
 <input type="checkbox" name="opção4" value="opção4"> bonito<br>
 <input type="checkbox" name="opção5" value="opção5"> maria
-</form>
 </fieldset>
 
 <fieldset>
@@ -68,12 +67,9 @@
 <fieldset>
 <legend>opiniães</legend>
 <label for="opinião">digite sua opinião sobre a diciplina</label><br>
-<form>
 <textarea rows="6" cols="80"></textarea>
-</form>
 </fieldset><br>
 
-<form>
 <input type="submit" value="gravar respostas">
 </form>
 </body>
